添加多线程切换的计算目录的能力，每次有新task后将之前的task取消掉，处理新task

--- a/MemoryMaster.vcxproj
+++ b/MemoryMaster.vcxproj
@@ -78,7 +78,7 @@
       <Optimization>MaxSpeed</Optimization>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
